[gd_scene load_steps=2 format=3 uid="uid://dvbyvnbli2xio"]

[ext_resource type="Script" uid="uid://bxt7qi6ms378b" path="res://scripts/patient_info_panel.gd" id="1"]

[node name="PatientInfoPanel" type="PanelContainer"]
custom_minimum_size = Vector2(400, 80)
script = ExtResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="NameLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Ime: --"

[node name="AgeGenderLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Starost: -- | Pol: --"

[node name="VisitReasonLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Povod dolaska: --"
